<resources>
    <string name="app_name">EatNear</string>

    <string name="near_restaurant_tab_label">near</string>
    <string name="all_restaurants_tab_label">all</string>
    <string name="add_review_message_view">Add new review to help other customers with good restaurant selection.</string>
    <string name="restaurant_message_view">Add new restaurant to extend our restaurant list.</string>
    <string name="welcome_page_button_label">ENTER</string>
    <string name="submit_new_review_button_label">ADD</string>
    <string name="category">Category</string>
    <string name="address_check_box">Set address as current GPS location</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="new_restaurant">New Restaurant</string>
    <string name="customer_name">Customer</string>
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="no_restaurants">No restaurants to display</string>
    <string name="no_reviews">Be first to rate this restaurant</string>

    <string-array name="food_category">
        <item>International</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>American</item>
        <item>Polish</item>
    </string-array>


    <!-- shared preferences -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="notifications_activation_key">notifications_activation</string>
    <string name="restaurant_types_key">restaurant_types</string>
    <string name="restaurant_types_default_value">International</string>
    <string name="near_area_key">near_area</string>
    <string name="near_area_default_value">1000</string>
    <string name="notifications_activation_summary_on">notifications active</string>
    <string name="notifications_activation_summary_off">notifications inactive</string>
    <string name="notificationsActivationTitle">turn on/off notifications</string>
    <string name="restaurant_types_title">Types of restaurants in notifications</string>
    <string name="near_area_title">Set "near area" distance (in meters)</string>
    <string name="menu_title">go to settings</string>
    <string name="action_settings">Settings</string>


</resources>
